--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,7 @@
 .p-footer{
     text-align: center;
     font-size: 16px;
-    color: white;
+    color: rgb(190, 190, 190);
     padding: 15px 0;
 }
 
@@ -11,4 +11,9 @@ footer{
 
 .aFooter{
     color: white;
+}
+
+.aFooter:hover{
+    transform: scale(1.03);
+    display: inline-block;
 }
