--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --background-color-header: rgb(52, 58, 64);
+  --background-color-hover: #ddd;
+  --background-color-sections: rgb(224, 224, 224);
+
+  --text-color-main: black;
+  --text-color-header: white;
+
+  --text-font: Roboto, Arial;
+}
+#myLinks {
+  display: flex;
+  justify-content: flex-end;
+}
+body div a {
+  padding: 20px;
+}
+
 section {
   display = flex;
   font-weight: bold;
@@ -37,6 +61,21 @@ div p {
 .button {
   display: flex;
   justify-content: center;
-  margin: 20px;
+}
+.play {
+  background-color: var(--background-color-header);
+  color: var(--text-color-header);
+  padding:5px;
+  border-radius: 5px;
+  margin-top:25px;
 
+}
+
+.play:hover {
+  position: relative;
+  top:-3px;
+  background-color: var(--background-color-hover);
+  color: var(--text-color-main);
+  /* border: 1px solid var(--background-color-header); */
+  box-shadow: 0 0 3px var(--background-color-header);
 }
