--- a/devTeam.css
+++ b/devTeam.css
@@ -36,11 +36,9 @@ h3{
     font-size: 15px;
     text-align: center;
     color: rgb(0, 0, 0);
-    margin: 10px;
-}
-
-.spanAge{
-    color: rgb(73, 73, 73);
+    margin: auto;
+    width: 300px;
+    padding: 15px;
 }
 
 .card:hover{
@@ -48,8 +46,8 @@ h3{
 }
 
 
-/*@media screen and (max-width: 768px){
-    .devTeam{
-        display: none;
+@media screen and (max-width: 480px){
+    h3{
+        width: 200px;
     }
-}*/
+}
