--- a/header.css
+++ b/header.css
@@ -1,4 +1,3 @@
-
 /*defining variables*/
 :root {
   --background-color-header: rgb(52, 58, 64);
@@ -65,6 +64,10 @@
     color: var(--text-color-header);
     width: min-content;
     white-space: nowrap;  
+}
+
+.topnav h1.active > a:hover {
+  color: var(--text-color-main);
 }
 
 
