--- a/index.css
+++ b/index.css
@@ -112,7 +112,7 @@ color: var(--text-color-main);
  }
 }
 section {
-  display = flex;
+  display : flex;
   font-weight: bold;
   margin: 20px 0px 20px 10px;
 }
@@ -131,7 +131,7 @@ section input {
   width: 100%;
   height: 300px;
   padding: 10px;
-  -webkit-box-sizing: border-box;
+ box-sizing: border-box;
 }
 div label {
   margin: 10px 0px 20px 10px;
@@ -195,4 +195,14 @@ footer{
   .rules {
     width: 80%;
   }
+}
 
+.buttonLetsPlay{
+  font-size: 20px;
+  padding: 5px;
+}
+
+.formLetsPlay{
+display: flex;
+justify-content: center;
+}
