--- a/index.css
+++ b/index.css
@@ -196,6 +196,8 @@ footer {
   }
 }
 .button {
+  display: flex;
+  justify-content: center;
   background-color: var(--background-color-header);
   text-align: center;
   color: var(--text-color-header);
@@ -203,6 +205,11 @@ footer {
   border-radius: 5px;
   margin-top: 25px;
   font-size: 35px;
+  display: flex;
+  justify-content: center;
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button:hover {
