--- a/scoreboard.css
+++ b/scoreboard.css
@@ -46,6 +46,7 @@ body {
 
     background-color: var(--background-color-sections);
     width:40%;
+    min-width: 300px;
     border: 4px solid var(--background-color-header);
     border-radius: 10px;
     margin-top: 25px;
@@ -56,6 +57,7 @@ body {
 
 .score-wrapper {
     display:flex;
+    flex-wrap: wrap;
     width:99%;
     justify-content: center;
     /*border: 1px solid black;*/
@@ -85,6 +87,7 @@ body {
 
 .ranking {
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
