--- a/game.css
+++ b/game.css
@@ -59,13 +59,82 @@ ul li {
   height: 60px;
   box-sizing: border-box;
 }
-
-.jeux {
-  /*height: calc(100vh - 60px - 60px - 150px);*/
+.card {
   display: flex;
+  flex-direction: column;
+  width: 30vw;
+  height: 30vw;
+  position: relative;
+  margin: 10px;
+  cursor: url(images/high-five.png), pointer;
+  transition: transform 1s;
+  transform-style: preserve-3d;
 }
 
-.jeux img {
+.card-face {
+  -webkit-backface-visibility: hidden;
+}
+
+.card img {
+  height: 30vw;
+  width: 30vw;
+  position: absolute;
+}
+
+.card.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card-face-front {
+  transform: rotateY(180deg);
+}
+
+.disabled,
+.matched {
+  pointer-events: none;
+}
+.conteneur {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  height: 30vw;
+  position: relative;
+  margin: 10px;
+  cursor: url(images/high-five.png), pointer;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.card-face {
+  -webkit-backface-visibility: hidden;
+}
+
+.card img {
+  height: 30vw;
+  width: 30vw;
+  position: absolute;
+}
+
+.card.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card-face-front {
+  transform: rotateY(180deg);
+}
+
+.disabled,
+.matched {
+  pointer-events: none;
+}
+
+/* .jeux img {
   display: block;
   max-width: 30vw;
 }
@@ -75,7 +144,7 @@ ul li {
   border: solid 1px black;
   border-radius: 5px;
 }
-.jeuximgfacile {
+.conteneur {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,7 +154,7 @@ ul li {
   height: auto;
   max-width: 100%;
   max-height: 100%;
-}
+} */
 
 /*jeux en mode normal*/
 
@@ -96,6 +165,7 @@ ul li {
   padding-bottom: 50px;
 }
 .replay {
+  cursor: url(images/high-five.png), pointer;
   border-radius: 100%;
   width: 100px;
   height: 100px;
@@ -104,5 +174,5 @@ ul li {
   outline: none;
 }
 .replay:hover {
-  cursor: pointer;
+  cursor: url(images/high-five.png), pointer;
 }
