--- a/scoreboard.css
+++ b/scoreboard.css
@@ -45,7 +45,7 @@ body {
     align-items: center;
 
     background-color: var(--background-color-sections);
-    width:40%;
+    width:50%;
     min-width: 300px;
     border: 4px solid var(--background-color-header);
     border-radius: 10px;
@@ -59,7 +59,7 @@ body {
     display:flex;
     flex-wrap: wrap;
     width:99%;
-    justify-content: center;
+    justify-content: space-between;
     /*border: 1px solid black;*/
     padding: 0.35em 0;
     font-size: 18px;
@@ -77,7 +77,8 @@ body {
 }
 
 .score-wrapper p {
-    padding: 3px;
+    padding: 3px 10px 3px 10px;
+
 }
 
 .score-wrapper:nth-of-type(2n) {
