--- a/game.css
+++ b/game.css
@@ -66,8 +66,6 @@ ul li {
   font-weight: bold;
 }
 
-
-
 /*this is the CSS from Guillem flipping and matching cards code*/
 .conteneur {
   display: flex;
@@ -88,7 +86,7 @@ ul li {
   height: 30vw;
   position: relative;
   margin: 10px;
-  cursor: url(images/high-five.png),pointer;
+  cursor: url(images/high-five.png), pointer;
   transition: transform 1s;
   transform-style: preserve-3d;
 }
@@ -117,19 +115,67 @@ ul li {
   pointer-events: none;
 }
 
-
-
 .jeux img {
   display: block;
   max-width: 30vw;
   border-radius: 5px;
-} 
+}
 
 .jeux .card {
   border-radius: 5px;
 }
 
+.overlay {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: none;
+}
 
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #ffffff;
+  border: solid 1px black;
+  border-radius: 20px;
+  width: 85%;
+  position: relative;
+  transition: all 5s ease-in-out;
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+  text-align: center;
+}
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+
+.popup .close:hover {
+  color: #e5f720;
+}
+
+.popup .content-1,
+.content-2 {
+  max-height: 30%;
+  overflow: auto;
+  text-align: center;
+}
 /*jeux en mode normal*/
 
 .replaysection {
