--- a/scoreboard.css
+++ b/scoreboard.css
@@ -98,7 +98,7 @@ body {
     color: var(--text-color-header);
     padding:5px;
     border-radius: 5px;
-    margin-top:25px;
+    margin-top:30px;
 
 }
 
@@ -116,6 +116,25 @@ body {
     color: inherit;
     font-size: 20px;
     padding:4px;
+}
+
+/*styling the "current score" section*/
+.currentScore {
+    margin-top: 25px;
+    padding: 5px; 
+    /* border: 1px solid var(--background-color-header); */
+    background-color: var(--background-color-sections);
+    box-shadow: 0 0 2px 1px var(--background-color-header);
+
+    color: var(--background-color-header);
+
+    font-size : 18px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.currentScore span {
+    font-weight: 600;
 }
 
 /*sticking the footer to the bottom of the page*/
