--- a/scoreboard.css
+++ b/scoreboard.css
@@ -47,9 +47,11 @@ body {
     background-color: var(--background-color-sections);
     width:50%;
     min-width: 300px;
+    max-width:630px;
     border: 4px solid var(--background-color-header);
     border-radius: 10px;
     margin-top: 25px;
+    padding-bottom:5px;
 
     box-shadow: 5px 5px 5px rgb(212, 205, 205);
 
@@ -122,6 +124,7 @@ body {
 .currentScore {
     margin-top: 25px;
     padding: 5px; 
+    max-width:80%;
     /* border: 1px solid var(--background-color-header); */
     background-color: var(--background-color-sections);
     box-shadow: 0 0 2px 1px var(--background-color-header);
