--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
   --background-color-sections: rgb(224, 224, 224);
 
   --text-color-main: black;
-  --text-color-header: white;
+  --text-color-header: black;
 
   --text-font: Roboto, Arial;
 }
@@ -21,20 +21,25 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+body{
+    background-image: url(images/rsz_high3.jpg);
+    background-repeat: no-repeat;
+    background-position: center;  
+  }
+}
 /*defining variables*/
 :root {
   --background-color-header: rgb(52, 58, 64);
   --background-color-hover: #ddd;
 
   --text-color-main: black;
-  --text-color-header: white;
+  --text-color-header: black;
 }
 
 /* Style the navigation menu */
 .topnav-wrapper {
   width: 100%;
-  background-color: var(--background-color-header, rgb(52, 58, 64));
+  background-color: rgba(0, 0, 0, 0);
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -106,6 +111,7 @@ section input {
   box-shadow: 2px 2px 2px grey;
 }
 .rules {
+  background-color: rgba(223, 74, 74, 0.8);
   margin: 10px 20px 0px 10px;
   border-style: solid;
   border-radius: 5px;
@@ -126,6 +132,7 @@ div p {
 }
 .Rules {
   font-weight: bold;
+  color: black;
   width: 80%;
 }
 .settings_title {
@@ -256,16 +263,29 @@ footer {
   margin-left: 15px;
 }
 
-.rules{
+.span-setting{
+  background-color: rgba(223, 74, 74, 0.8);
+  margin: 10px 20px 0px 10px;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: black;
+  box-shadow: 2px 2px 2px grey;
+  border: solid;
+  padding: 5px;
+  font-weight: bold;
+ 
+}
+
+.rules {
   height: auto;
 }
 
-.enterPseudo{
+.enterPseudo {
   display: flex;
   flex-wrap: wrap;
 }
 
-.span-2{
+.span-2 {
   margin-bottom: 5px;
 }
 
