--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@
   box-sizing: border-box;
 }
 body{
-    background-image: url(images/rsz_high3.jpg);
+    background-image: url(images/high55.jpg);
     background-repeat: no-repeat;
     background-position: center;  
   }
