--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@
 
 :root {
   --background-color-header: rgb(52, 58, 64);
-  --background-color-hover: rgba(223, 74, 74, 0.8);
-  --background-color-sections: rgba(223, 74, 74, 0.8);
+  --background-color-hover: rgba(238, 120, 66, 0.822);
+  --background-color-sections: rgba(238, 120, 66, 0.822);
 
   --text-color-main: black;
   --text-color-header: black;
@@ -21,16 +21,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
-    background-image: url(images/high55.jpg);
-    background-repeat: no-repeat;
-    background-position: center;  
-  }
+body {
+  background-image: url(images/high44.jpeg);
+  background-color: rgba(252, 252, 252, 0.3)
+  background-repeat: no-repeat;
+  background-position: center;
 }
+
 /*defining variables*/
 :root {
   --background-color-header: rgb(52, 58, 64);
-  --background-color-hover: #ddd;
+  --background-color-hover: rgba(238, 120, 66, 0.822);
 
   --text-color-main: black;
   --text-color-header: black;
@@ -59,7 +60,6 @@ body{
 /* Hide the links inside the navigation menu (except for logo/home) - for mobile */
 .topnav #myLinks {
   display: none;
-  
 }
 
 /* Style navigation menu links - ALL the links inside the .topnav div, including the main title */
@@ -112,16 +112,18 @@ section input {
   box-shadow: 2px 2px 2px grey;
 }
 .rules {
-  background-color: rgba(223, 74, 74, 0.8);
+  background-color: rgba(238, 120, 66, 0.822);
   margin: 10px 20px 0px 10px;
   border-style: solid;
+  border: none;
   border-radius: 5px;
   border-color: black;
-  box-shadow: 2px 2px 2px grey;
   width: 100%;
   height: 300px;
   padding: 10px;
   box-sizing: border-box;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
 }
 div label {
   margin: 10px 0px 20px 10px;
@@ -131,11 +133,16 @@ div p {
   font-weight: bold;
   margin: 20px 0px 20px 10px;
 }
+
+
 .Rules {
-  font-weight: bold;
-  color: black;
   width: 80%;
 }
+
+.rules_games{
+  color : black;
+}
+
 .settings_title {
   margin-bottom: 0px;
 }
@@ -212,7 +219,7 @@ footer {
 .alert {
   display: none;
   font-size: 16px;
-  color: rgb(201, 83, 83);
+  color: rgba(238, 120, 66, 0.822);
   text-align: center;
   padding: 5px;
 }
@@ -265,17 +272,15 @@ footer {
   margin-left: 15px;
 }
 
-.span-setting{
-  background-color: rgba(223, 74, 74, 0.8);
+.span-setting {
+  background-color: rgba(238, 120, 66, 0.822);
   margin: 10px 20px 0px 10px;
   border-style: solid;
+  border :none;
   border-radius: 5px;
-  border-color: black;
-  box-shadow: 2px 2px 2px grey;
-  border: solid;
   padding: 5px;
   font-weight: bold;
- 
+  color: white;
 }
 
 .span-8 {
@@ -307,7 +312,7 @@ footer {
   font-weight: bold;
 }
 
-.span-3{
+.span-3 {
   background-color: rgba(255, 255, 255, 0.8);
   margin: 10px 20px 0px 10px;
   border-radius: 5px;
