--- a/contact.css
+++ b/contact.css
@@ -7,21 +7,21 @@
 /*defining variables*/
 :root {
   --background-color-header: rgb(52, 58, 64);
-  --background-color-hover: #ddd;
-  --background-color-sections: rgb(224, 224, 224);
+  --background-color-hover: rgba(238, 120, 66, 0.822);
+  --background-color-sections: rgba(238, 120, 66, 0.822);
 
   --text-color-main: black;
-  --text-color-header: white;
+  --text-color-header: black;
 
   --text-font: Roboto, Arial;
 }
+
 
 /* Mise en forme du header __________________________________________________________________ */
 
 /* Style the navigation menu */
 .topnav-wrapper {
   width: 100%;
-  background-color: var(--background-color-header, rgb(52, 58, 64));
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -99,6 +99,11 @@ body {
   font-family: var(--text-font);
   font-size: 16px;
   font-weight: 400; /*normal*/
+  background-image: url(images/high44.jpeg);
+  background-image: url(images/high44.jpeg);
+  background-color: rgba(252, 252, 252, 0.3)
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 form {
@@ -138,7 +143,7 @@ textarea {
 button {
   background-color: var(--background-color-header);
   text-align: center;
-  color: var(--text-color-header);
+  color: white;
   padding: 5px;
   border-radius: 5px;
   margin-top: 10px;
@@ -146,7 +151,8 @@ button {
 }
 
 button p {
-  color: var(--text-color-header);
+  color: white;
+  font-weight: bold;
 }
 
 button img {
