--- a/scoreboard.css
+++ b/scoreboard.css
@@ -19,6 +19,11 @@ body {
   font-family: var(--text-font);
   font-size: 16px;
   font-weight: 400; /*normal*/
+  background-image: url(images/high44.jpeg);
+  background-color: rgba(252, 252, 252, 0.3);
+  background-repeat: no-repeat;
+  background-position: center;
+
 }
 
 .content-wrapper {
@@ -42,7 +47,7 @@ body {
   justify-content: flex-start;
   align-items: center;
 
-  background-color: var(--background-color-sections);
+  background-color: rgb(253, 175, 139);
   width: 50%;
   min-width: 300px;
   max-width: 630px;
@@ -68,9 +73,15 @@ body {
 
 .score-wrapper:nth-of-type(1) {
   /*writing the first score bigger because it's the record*/
+  flex-direction:column;
   font-size: 20px;
   letter-spacing: 0.1em;
   font-weight: bold;
+  
+}
+
+.recordText {
+  margin:auto;
   text-shadow: 1px 1px rgb(131, 131, 131), 2px 2px rgb(131, 131, 131),
     3px 3px rgb(131, 131, 131);
 }
@@ -80,8 +91,8 @@ body {
 }
 
 .score-wrapper:nth-of-type(2n) {
-  background-color: var(--background-color-header);
-  color: var(--text-color-header);
+  background-color: rgba(216, 92, 34, 0.6);
+  color: var(--text-color-header);s
 }
 
 .ranking {
@@ -91,12 +102,18 @@ body {
 }
 
 .button {
-  background-color: var(--background-color-header);
+  display: flex;
+  justify-content: center;
+  background-color:  rgb(52, 58, 64);
   text-align: center;
   color: var(--text-color-header);
   padding: 5px;
   border-radius: 5px;
-  margin-top: 30px;
+  margin-top: 25px;
+  font-size: 35px;
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button:hover {
@@ -104,15 +121,15 @@ body {
   top: -3px;
   background-color: var(--background-color-hover);
   color: var(--text-color-main);
-  /* border: 1px solid var(--background-color-header); */
   box-shadow: 0 0 3px var(--background-color-header);
 }
 
 .button a {
   text-decoration: none;
-  color: inherit;
+  color: white;
   font-size: 20px;
   padding: 4px;
+  font-weight: bold;
 }
 
 /*styling the "current score" section*/
@@ -120,11 +137,10 @@ body {
   margin-top: 25px;
   padding: 5px;
   max-width: 80%;
-  /* border: 1px solid var(--background-color-header); */
   background-color: var(--background-color-sections);
   box-shadow: 0 0 2px 1px var(--background-color-header);
 
-  color: var(--background-color-header);
+  color: white;
 
   font-size: 18px;
   font-weight: 500;
